--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     authToken: "some random stuff here",
-    mongoDB_User_Url: "url to mongoDB for storing users",
-    mongoDB_CTF_Url: "url to mongoDB for storing CTF information",
+    mongoUserUrl: "url to mongoDB for storing users",
+    mongoCTFUrl: "url to mongoDB for storing CTF information",
     sessionSecretKey: "session secret key"
 }
